@@ -22,7 +22,8 @@ namespace error {
 		}
 		static std::wstring from_module(std::wstring module, unsigned long dwError) {
 			LPVOID lpMsgBuf;
-			unsigned long dwRet = FormatMessage(FORMAT_MESSAGE_ALLOCATE_BUFFER|FORMAT_MESSAGE_FROM_HMODULE|FORMAT_MESSAGE_IGNORE_INSERTS,GetModuleHandle(module.c_str()),dwError,MAKELANGID(LANG_NEUTRAL,SUBLANG_DEFAULT),(LPTSTR)&lpMsgBuf,0,NULL);
+			unsigned long dwRet = FormatMessage(FORMAT_MESSAGE_ALLOCATE_BUFFER|FORMAT_MESSAGE_FROM_HMODULE|FORMAT_MESSAGE_IGNORE_INSERTS,
+				GetModuleHandle(module.c_str()),dwError,MAKELANGID(LANG_NEUTRAL,SUBLANG_DEFAULT),(LPTSTR)&lpMsgBuf,0,NULL);
 			if (dwRet == 0) {
 				return _T("failed to lookup error code: ") + strEx::itos(dwError) + _T("( reson: ") + strEx::itos(GetLastError()) + _T(")");
 			}
@@ -55,6 +56,27 @@ namespace error {
 		}
 		class message {
 		public:
+			static std::wstring from_module(std::wstring module, unsigned long dwError) {
+				HMODULE hDLL = LoadLibraryEx(module.c_str(), NULL, DONT_RESOLVE_DLL_REFERENCES);
+				if (hDLL == NULL) {
+					return _T("failed to load: ") + module + _T("( reson: ") + strEx::itos(GetLastError()) + _T(")");
+				}
+				LPVOID lpMsgBuf;
+				unsigned long dwRet = FormatMessage(FORMAT_MESSAGE_ALLOCATE_BUFFER|FORMAT_MESSAGE_FROM_HMODULE|FORMAT_MESSAGE_IGNORE_INSERTS,hDLL,
+					dwError,MAKELANGID(LANG_NEUTRAL,SUBLANG_DEFAULT),(LPTSTR)&lpMsgBuf,0,NULL);
+				if (dwRet == 0) {
+					FreeLibrary(hDLL);
+					DWORD err = GetLastError();
+					if (err == 317) {
+						return _T("");
+					}
+					return _T("failed to lookup error code: ") + strEx::itos(dwError) + _T(" from DLL: ") + module + _T("( reson: ") + strEx::itos(err) + _T(")");
+				}
+				std::wstring str = reinterpret_cast<TCHAR*>(lpMsgBuf);
+				LocalFree(lpMsgBuf);
+				FreeLibrary(hDLL);
+				return str;
+			}
 			static std::wstring from_module(std::wstring module, unsigned long dwError, DWORD *arguments) {
 				HMODULE hDLL = LoadLibraryEx(module.c_str(), NULL, DONT_RESOLVE_DLL_REFERENCES);
 				if (hDLL == NULL) {
